--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
                             <div class="account-form__box">
                                 <i class="account-form__box-icon uil uil-lock-alt"></i>
                                 <input id="true-password" type="password" class="account-form__input password" placeholder="Nhập mật khẩu" required>
+                               <span class="error password"></span>
                             </div>
 
                             <div class="account-form__box">
