--- a/index.html
+++ b/index.html
@@ -268,11 +268,12 @@
                                     <div class="cart__form-info-box">
                                         <label for="fullname" class="cart__form-info-lable">Họ tên: *</label>
                                         <input id="fullname" class="cart__form-info-input" type="text" placeholder="Nhập họ tên" required>
+                                        <span class="error-name">Tên phải có số ký tự từ 3 đến 50 và không chứa ký tự số và ký tự đặc biệt</span>
                                     </div>
                                     <div class="cart__form-info-box">
                                         <label for="phone"class="cart__form-info-lable">Số điện thoại: *</label>
                                         <input id="phone" class="cart__form-info-input" type="text" placeholder="Nhập số điện thoại" required>
-                                        <span class="error-phone">Số điện thoại phải có 10 chữ số</span>
+                                        <span class="error-phone">Số điện thoại phải có 10 chữ số và bắt đầu bằng số 0</span>
                                     </div>
                                     <div class="cart__form-info-box">
                                         <label for="address"class="cart__form-info-lable">Địa chỉ: *</label>
