--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     <div class="cart__form-info-box">
                                         <label for="phone"class="cart__form-info-lable">Số điện thoại: *</label>
                                         <input id="phone" class="cart__form-info-input" type="text" placeholder="Nhập số điện thoại" required>
-                                        <span class="error-phone">Số điện thoại phải có 10 chữ số và bắt đầu bằng số 0</span>
+                                        <span class="error-phone">Số điện thoại phải có 10 số và bắt đầu bằng số 0</span>
                                     </div>
                                     <div class="cart__form-info-box">
                                         <label for="address"class="cart__form-info-lable">Địa chỉ: *</label>
