--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                             </label>
                         </div>
 
-                        <button id="login-button"class="account-form__btn" type="submit">Đăng ký</button>
+                        <button id="register-button"class="account-form__btn" type="submit">Đăng ký</button>
 
                         <div class="account-form__switch">
                             Bạn đã có tài khoản? 
@@ -488,7 +488,7 @@
                             </div>
                         </div>
 
-                        <button class="account-form__btn">Đăng nhập</button>
+                        <button id="login-button" class="account-form__btn">Đăng nhập</button>
 
                         <div class="account-form__switch">
                             Bạn chưa có tài khoản? 
