--- a/admin.html
+++ b/admin.html
@@ -451,7 +451,7 @@
                                     <option value="user">Người dùng</option>
                                 </select>
                             </div>
-                            <button class="control-form___form-btn" type="submit">Lưu chỉnh sửa</button>
+                            <button id="save-edit-user-button" class="control-form___form-btn" type="submit">Lưu chỉnh sửa</button>
                         </form>
                     </div>
                 </div>
