--- a/admin.html
+++ b/admin.html
@@ -411,7 +411,7 @@
             <div class="modal-body">
                 <!-- User info -->
                 <div id="user-info" class="control-form">
-                    <span class="close" onclick="document.getElementById('user-control-modal').style.display='none'">
+                    <span id="close-edit-user" class="close" onclick="document.getElementById('user-control-modal').style.display='none'">
                         <i class="close-btn fa-solid fa-xmark"></i>
                     </span>
                     <div class="control-form__container">
