--- a/admin.html
+++ b/admin.html
@@ -118,7 +118,7 @@
 
                     <div class="admin__statis-filter">
                         <h3>Chọn loại sản phẩm:</h3>
-                        <select name="" id="" onchange="showChart(this.value)">
+                        <select name="" id="select-product" onchange="showChart(this.value)">
                             <option value="all" selected>Tất cả</option>
                             <option value="iphone">iPhone</option>
                             <option value="ipad">iPad</option>
