--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div id="main">
-        <!-- Header -->
+        <!-- Header web -->
         <header class="header"> 
             <div class="grid wide">
                 <div class="header__navbar">
